internal/kgateway/translator/gateway/testutils/inputs/delegation/invalid_child_valid_standalone.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: infra
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: infra
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /a
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: a
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
  namespace: infra
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-a
  namespace: a
spec:
  hostnames:
  - "foo.com" # hostname must not be set on delegatee but it can be set for a standalone attachment to a Gateway
  parentRefs:
  - name: example-gateway
    namespace: infra
    group: gateway.networking.k8s.io
    kind: Gateway
  - name: example-route
    namespace: infra
    group: gateway.networking.k8s.io
    kind: HTTPRoute
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /a/1
    backendRefs:
    - name: svc-a
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-a
  namespace: a
spec:
  ports:
    - protocol: TCP
      port: 8080
